--- a/packages/keys-client/cli/package.json
+++ b/packages/keys-client/cli/package.json
@@ -52,6 +52,7 @@
         "cross-fetch": "^3.0.6",
         "graphql": "^15.4.0",
         "graphql-tag": "^2.11.0",
+        "js-sha512": "^0.8.0",
         "subscriptions-transport-ws": "^0.9.18"
     },
     "devDependencies": {
