keys-client/cli > setup: package

--- a/packages/keys-client/cli/package.json
+++ b/packages/keys-client/cli/package.json
@@ -53,6 +53,7 @@
         "graphql": "^15.4.0",
         "graphql-tag": "^2.11.0",
         "js-sha512": "^0.8.0",
+        "react": "^17.0.1",
         "subscriptions-transport-ws": "^0.9.18"
     },
     "devDependencies": {
